# ballarat-weather

./: README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  entrypoint.sh  import_weather_data.py  pyproject.toml  scrape_history.py  weather.db
backend/app/: database.py  main.py  models.py  schemas.py  scraper.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx
